# AgenticAI-HandsOn

./: README.md  pyproject.toml
examples/: extract_cases.py  gemini_jina_aixpress.py  gemini_websearch.py  local_hackernews_team.py  websearch.py
notebooks/: 00_setup.ipynb  01_simple_websearch.ipynb  02_rag.ipynb  03_youtube_summarization.ipynb  04_structured_generation.ipynb  04_structured_generation_extraction.ipynb  04b_nuextract_tools.ipynb  05_nuextract_tools.ipynb  create_story.py  extract_cases.py  nuextract_tools.py  requirements.txt  test_nuextract.py  websearch.py  youtube.py
old_examples/: extract_cases.py  hn_team.py  local_hackernews_team.py  test_nuextract.py
