[project]
name = "agenticai-handson"
version = "0.1.0"
description = "Hands-On Lab for Agentic AI workshop"
readme = "README.md"
requires-python = "==3.11.10"
dependencies = [
    "agno>=1.6.4",
    "duckduckgo-search>=8.0.4",
    "fastapi>=0.115.13",
    "fastapi-mcp>=0.3.4",
    "fastmcp>=2.9.0",
    "feedparser>=6.0.11",
    "google-genai>=1.21.1",
    "jupyter>=1.1.1",
    "lancedb>=0.24.0",
    "ollama>=0.5.1",
    "openai>=1.91.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pypdf>=5.6.1",
    "requests>=2.32.4",
    "uvicorn>=0.34.3",
    "youtube-transcript-api>=1.1.0",
]
